# duckdb

./: .gitignore
extension/: extension_config.cmake
extension/httpfs/: CMakeLists.txt  ceph_connector.cpp  cephfs.cpp  httpfs.cpp  httpfs_config.py  httpfs_extension.cpp  raw_ceph_connector.cpp  raw_ceph_connector.hpp  s3fs.cpp  utils.cpp  utils.hpp
extension/httpfs/include/: LRUCache11.hpp  ceph_connector.hpp  cephfs.hpp  s3fs.hpp
extension/httpfs/include/rados/: buffer.h
extension/httpfs/test/: CMakeLists.txt  ceph.cpp  ceph_bench.cpp  ceph_bench_setup.cpp  path.cpp
src/common/: file_system.cpp  local_file_system.cpp
src/include/duckdb/common/: file_system.hpp
src/include/duckdb/common/tsl/: htrie_map.h
src/main/: config.cpp
tools/pythonpkg/: setup.py
